[tool.poetry]
name = "fluent-python"
version = "0.1.0"
description = ""
authors = ["Ian Hsu <ian927@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
